--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/adamsea/recipes-api#readme",
   "dependencies": {
+    "lodash": "^3.10.1",
     "restify": "^4.0.3"
   }
 }
