--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
+    "cors": "^2.7.1",
     "debug": "^2.2.0",
     "express": "^4.13.3",
     "node-json-db": "^0.5.1"
