--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cors": "^2.7.1",
     "debug": "^2.2.0",
     "express": "^4.13.3",
+    "lodash": "^3.10.1",
+    "lodash-migrate": "^0.2.1",
     "node-json-db": "^0.5.1"
   }
 }
