Prepare branch for section 6.1 tutorial - add auth utils

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/adamsea/recipes-api#readme",
   "dependencies": {
+    "basic-auth": "^1.0.3",
     "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
     "cors": "^2.7.1",
